--- a/Konutcheck - BackEnd/konutcheck/src/main/resources/application.properties
+++ b/Konutcheck - BackEnd/konutcheck/src/main/resources/application.properties
@@ -1,11 +1,11 @@
 spring.datasource.url=jdbc:postgresql://localhost:5432/Konutcheck
 spring.datasource.username=postgres
-spring.datasource.password=aytenaylint14303
+spring.datasource.password=bangtan
 spring.datasource.driver-class-name=org.postgresql.Driver
 
-spring.jpa.hibernate.ddl-auto=create-drop
+spring.jpa.hibernate.ddl-auto=update
 spring.jpa.show-sql=true
 
-server.port = 8081
+server.port = 8080
 
 logging.level.org.springframework = info
