Authentication was added to project.

--- a/Konutcheck - BackEnd/konutcheck/src/main/resources/application.properties
+++ b/Konutcheck - BackEnd/konutcheck/src/main/resources/application.properties
@@ -9,3 +9,7 @@ spring.jpa.show-sql=true
 server.port = 8080
 
 logging.level.org.springframework = info
+
+application_title=KONUTCHECK PROJECT
+jwt.security.app.key=KONUTCHECK
+jwt.security.expire.time=86400000
