--- a/Konutcheck - BackEnd/konutcheck/src/main/resources/application.properties
+++ b/Konutcheck - BackEnd/konutcheck/src/main/resources/application.properties
@@ -3,7 +3,7 @@ spring.datasource.username=postgres
 spring.datasource.password=aytenaylint14303
 spring.datasource.driver-class-name=org.postgresql.Driver
 
-spring.jpa.hibernate.ddl-auto=create-drop
+spring.jpa.hibernate.ddl-auto=update
 spring.jpa.show-sql=true
 
 server.port = 8081
