--- a/Konutcheck - BackEnd/konutcheck/src/main/resources/application.properties
+++ b/Konutcheck - BackEnd/konutcheck/src/main/resources/application.properties
@@ -1,6 +1,6 @@
 spring.datasource.url=jdbc:postgresql://localhost:5432/Konutcheck
 spring.datasource.username=postgres
-spring.datasource.password=bangtan
+spring.datasource.password=766485
 spring.datasource.driver-class-name=org.postgresql.Driver
 
 spring.jpa.hibernate.ddl-auto=update
@@ -9,6 +9,7 @@ spring.jpa.show-sql=true
 server.port = 8080
 
 logging.level.org.springframework = info
+logging.level.org.springframework.web = DEBUG
 
 application_title=KONUTCHECK PROJECT
 jwt.security.app.key=KONUTCHECK
